--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<h1>I am Jose Palen Baez and this is my ITIS3135 First Course Page </h1>." 
 		<a href = "itis3135/">Click to go to ITIS3135 Site</a> 
 		<title>Personal Webpage | UNC Charlotte</title>
 		<style type="text/css">
