--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Im ben and this is the root of my website <a href = "itis3135/">Click to go to ITIS3135 Site</a> Personal Webpage | UNC Charlotte</title>
+Im Jose and this is the root of my website <a href = "itis3135/">Click to go to ITIS3135 Site</a> Personal Webpage | UNC Charlotte</title>
 		<style type="text/css">
 			body {
 				background-color: #FFFFFF;
