--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,1 +1,27 @@
-<h1>I am Jose Palen Baez and this is my ITIS3135 First Course Page </h1> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jose Palen's Jolly Proud Bear</title>
+</head>
+<body>
+    <header>
+        <h1>Jose Palen's Jolly Proud Bear || ITIS 3135</h1>
+        <nav>
+            <a href="./">Home</a>
+            |
+            <a href="introduction.html">Introduction</a>
+            |
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+    <main>
+        <h2>Home</h2>
+        <p>Hola, you've made it(not sure)</p>
+    </main>
+    <footer>
+        
+    </footer>
+</body>
+</html>
