--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jose Palen's Jolly Proud Bear</title>
+    <title>Jose Palen's Jolly Proud Bear Introduction</title>
     <link rel="stylesheet" href="styles/default.css">
 </head>
 <body>
@@ -18,8 +18,30 @@
         </nav>
     </header>
     <main>
-        <h2>Home</h2>
-        <p>Hola, you've made it(not sure)</p>
+        <h2>Introduction</h2>
+        <h2>Jose Palen Baez || Jolly Proud Bear</h2>
+        <figure>
+            <img src="images/Photo1Fun.jpeg" alt="Jose_Palen">
+            <figcaption>With friends(I'm on the right)</figcaption>
+        </figure>
+        <ul>
+            <li><b>Personal background:</b> I grew up in the Dominican Republic and as soon as I finished high school I moved to the US to study Computer Science in UNCC.</li>
+            <li><b>Professional background:</b> I've been working retail for the past 2 years but none computer science related.</li>
+            <li><b>Academic background:</b> I'm a Junior currently pursuing a Bachelor's degree in Computer Science with a concentration in Cyber.</li>
+            <li><b>Programming Software Background:</b> The programming language that I feel more comfortable using is Java and I have like a year or more of experience. I have used C, HTML, JavaScript before but just the basics.</li>
+            <li><b>Primary Computer Platform:</b> Windows</li>
+            <li><b>Courses I'm in & Why:</b>
+                <ul>
+                    <li><b>ITIS 3135 - Web-Application Design and Development:</b> It caught my attention.</li>
+                    <li><b>MATH 2164 - Matrices & Linear Algebra:</b>Requirement for degree.</li>
+                    <li><b>ITSC  3146 - Intro Oper Syst & Networking:</b>I want to know more about Networking.</li>
+                    <li><b>ITCS 3112 - Dsgn & Imp Object-oriented Sys:</b>It seems interesting and it would be good for my resume.</li>
+                </ul>
+            </li>
+            <li><b>Funny/Interesting Item about Yourself:</b>I play pickleball, paddle tennis and soccer.</li>
+            <li><b>I'd also like to share:</b>I'm open to getting to know new people and making memories ig!.</li>
+
+      </ul>
     </main>
     <footer>
         <a href="https://webpages.charlotte.edu/jpalenba/">Charlotte.edu</a>
