--- a/itis3135/JollyBearly.com/index.html
+++ b/itis3135/JollyBearly.com/index.html
@@ -13,6 +13,6 @@
     </style>
 </head>
 <body>
-    <P> This is the design page of JollyBearly </P>
+    <p> This is the design page of JollyBearly </p>
 </body>
 </html>
