--- a/itis3135/JollyBearly.com/index.html
+++ b/itis3135/JollyBearly.com/index.html
@@ -13,6 +13,6 @@
     </style>
 </head>
 <body>
-    <p> This is the design page of JollyBearly </p>
+    <p> This is the design page of JollyBearly &copy; 2025</p>
 </body>
 </html>
