--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -31,12 +31,12 @@
             <li><b>Academic background:</b> I'm a Junior currently pursuing a Bachelor's degree in Computer Science with a concentration in Cyber.</li>
             <li><b>Programming Software Background:</b> The programming language that I feel more comfortable using is Java and I have like a year or more of experience. I have used C, HTML, JavaScript before but just the basics.</li>
             <li><b>Primary Computer Platform:</b> Windows</li>
-            <li><b>Courses I'm in & Why:</b>
+            <li><b>Courses I'm in &amp; Why:</b>
                 <ul>
                     <li><b>ITIS 3135 - Web-Application Design and Development:</b> It caught my attention.</li>
-                    <li><b>MATH 2164 - Matrices & Linear Algebra:</b>Requirement for degree.</li>
-                    <li><b>ITSC  3146 - Intro Oper Syst & Networking:</b>I want to know more about Networking.</li>
-                    <li><b>ITCS 3112 - Dsgn & Imp Object-oriented Sys:</b>It seems interesting and it would be good for my resume.</li>
+                    <li><b>MATH 2164 - Matrices &amp; Linear Algebra:</b>Requirement for degree.</li>
+                    <li><b>ITSC  3146 - Intro Oper Syst &amp; Networking:</b>I want to know more about Networking.</li>
+                    <li><b>ITCS 3112 - Dsgn &amp; Imp Object-oriented Sys:</b>It seems interesting and it would be good for my resume.</li>
                 </ul>
             </li>
             <li><b>Funny/Interesting Item about Yourself:</b>I play pickleball, paddle tennis and soccer.</li>
@@ -59,12 +59,12 @@
 
         <p>Page Built by <a href="JollyBearly.com">Jolly Proud Enterprises </a>&copy; 2025 </p>
 
-        <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
-            <img style="border:0;width:88px;height:31px"
+        <a href="https://validator.w3.org/check?uri=referer" id="validation-link-html">
+            <img class="validator-icon"
                  src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
           </a>
-          <a href="https://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css">
-            <img style="border:0;width:88px;height:31px"
+          <a href="https://jigsaw.w3.org/css-validator/check/referer" id="validation-link-css">
+            <img class="validator-icon"
                  src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
           </a>
     </footer>
