--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <h2>Home</h2>
-        <p>Hola, you've made it(not sure)</p>
+        <p>Hola, Welcome to my Webpage</p>
     </main>
     <footer>
         <a href="https://webpages.charlotte.edu/jpalenba/">Charlotte.edu</a>
@@ -37,12 +37,12 @@
 
         <p>Page Built by <a href="JollyBearly.com">Jolly Proud Enterprises </a>&copy; 2025 </p>
 
-        <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
-            <img style="border:0;width:88px;height:31px"
+        <a href="https://validator.w3.org/check?uri=referer" id="validation-link-html">
+            <img class="validator-icon"
                  src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
           </a>
-          <a href="https://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css">
-            <img style="border:0;width:88px;height:31px"
+          <a href="https://jigsaw.w3.org/css-validator/check/referer" id="validation-link-css">
+            <img class="validator-icon"
                  src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
           </a>
     </footer>
