--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -16,6 +16,8 @@
             <a href="introduction.html">Introduction</a>
             |
             <a href="contract.html">Contact</a>
+            |
+            <a href="Jolly-Proud-Bear-Brewery/index.html">Jolly Proud Bear Brewery</a>
         </nav>
     </header>
     <main>
