--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -59,7 +59,7 @@
         |
         <a href="https://www.linkedin.com/in/jose-palen-baez-2383a432a/">linkedin</a>
 
-        <p>Page Built by <a href="JollyBearly.com">Jolly Proud Enterprises </a>&copy; 2025 </p>
+        <p>Page Built by <a href="JollyBearly.org">Jolly Proud Enterprises </a>&copy; 2025 </p>
 
         <a href="https://validator.w3.org/check?uri=referer" id="validation-link-html">
             <img class="validator-icon"
