--- a/itis3135/JollyBearly.org/index.html
+++ b/itis3135/JollyBearly.org/index.html
@@ -62,6 +62,24 @@
             text-align: center;
         }
 
+        footer a{
+            align-items: center;
+        }
+
+        .contact-block {
+            margin: 10px auto ;
+            padding: 20px;
+            padding-bottom: 10px;
+            background: white;
+            color: red;
+            text-align: center;
+            border-radius: 10px;
+            border: 2px solid red;
+            font-size: 15px;
+            font-weight: bold;
+            max-width: 300px;
+        }
+
     </style>
 </head>
 <body>
@@ -89,6 +107,9 @@
         </p>
     </main>
     <footer>
+        <div class = "contact-block">
+        <p>jollybearly@gmail.com <br>704-777-5143 <br> Located in the happiest place in the world</p>
+        </div>
         <p>© 2025</p>
         <a href="https://validator.w3.org/check?uri=referer" id="validation-link-html">
             <img class="validator-icon"
