--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Jose's website</title>
 	<script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
-</head>
-<style>
+
+	<style>
 	body {
 		background-color: #899064;
 		text-align: center;
@@ -73,7 +73,8 @@
 		width: 15%;
 	}
 
-</style>
+	</style>
+</head>
 <body>
 	<header>
 		<p>Welcome to my website</p>
@@ -103,9 +104,10 @@
         ~
         <a href="https://www.linkedin.com/in/jose-palen-baez-2383a432a/">linkedin</a>
 		<figure>
-			<a href="https://www.charlotte.edu/" alt="website">
-			<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/Charlotte_49ers_logo.svg/1200px-Charlotte_49ers_logo.svg.png" alt="charlotte_logo">
-		</a>
+			<a href="https://www.charlotte.edu/">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/Charlotte_49ers_logo.svg/216px-Charlotte_49ers_logo.svg.png" 
+				alt="Charlotte 49ers Logo">
+				</a>
 		</figure>
 	</footer>
 </body>
