--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -24,7 +24,7 @@
         <h2>Introduction</h2>
         <h2>Jose Palen Baez || Jolly Proud Bear</h2>
         <figure>
-            <img src="images/Photo1Fun.jpeg" alt="Jose_Palen">
+            <img src="images/Photo1Fun_521x680.jpg" alt="Jose_Palen">
             <figcaption>With friends(I'm on the right)</figcaption>
         </figure>
         <ul>
@@ -59,7 +59,7 @@
         |
         <a href="https://www.linkedin.com/in/jose-palen-baez-2383a432a/">linkedin</a>
 
-        <p>Page Built by <a href="JollyBearly.org">Jolly Proud Enterprises </a>&copy; 2025 </p>
+        <p>Page Built by <a href="JollyBearly.org">Jolly Proud Enterprises, </a><a href="https://www.freecodecamp.org/certification/jpalenba/responsive-web-design"><i>Certified in Responsive Web Design</i></a> &copy; 2025 </p>
 
         <a href="https://validator.w3.org/check?uri=referer" id="validation-link-html">
             <img class="validator-icon"
