--- a/itis3135/Jolly-Proud-Bear-Brewery/home.html
+++ b/itis3135/Jolly-Proud-Bear-Brewery/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jose Palen's Jolly Proud Bear</title>
-    <link rel="stylesheet" href="styles\default.css">
+    <link rel="stylesheet" href="styles/default.css">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -34,7 +34,7 @@
         |
         <a href="https://www.linkedin.com/in/jose-palen-baez-2383a432a/">linkedin</a>
 
-        <p>Page Built by <a href="../JollyBearly.org">Jolly Proud Enterprises </a>&copy; 2025 </p>
+        <p>Page Built by <a href="../JollyBearly.org">Jolly Proud Enterprises, </a><a href="https://www.freecodecamp.org/certification/jpalenba/responsive-web-design"><i>Certified in Responsive Web Design</i></a> &copy; 2025 </p>
 
         <a href="https://validator.w3.org/check?uri=referer" id="validation-link-html">
             <img class="validator-icon"
