--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -29,7 +29,7 @@
         |
         <a href="https://github.com/jpalenba/jpalenba.github.io">Github</a>
         |
-        <a href="https://jpalenba.github.io/">Github.io</a>
+        <a href="https://jpalenba.github.io/itis3135">Github.io</a>
         |
         <a href="https://www.freecodecamp.org/jpalenba">freeCodeCamp</a>
         |
