--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -37,7 +37,7 @@
         |
         <a href="https://github.com/jpalenba/jpalenba.github.io">Github</a>
         |
-        <a href="https://jpalenba.github.io/">Github.io</a>
+        <a href="https://jpalenba.github.io/itis3135/contract.html">Github.io</a>
         |
         <a href="https://www.freecodecamp.org/jpalenba">freeCodeCamp</a>
         |
