--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -12,8 +12,8 @@
         <div data-include="components/header.html"></div>
     </header>
     <main>
-        <h2>Home</h2>
-        <p>Hola, Welcome to my Webpage</p>
+        <h1>Home</h1>
+        <h2>Hola, Welcome to my Webpage</h2>
     </main>
     <footer>
         <div data-include="components/footer.html"></div>
