--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@ img {
 			<h1>Course page below!</h1>
 			<nav>
 				<a href="itis3135/">Course Folder</a>
+                <a href="clientProject/">Project</a>
 			</nav>
 		</div>
 	</main>
