--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -14,7 +14,7 @@
     <main>
        <h2>HTML Tables</h2>
        <h3>My Data</h3>
-       <ul class="centered-list">
+       <ol class="centered-list">
             <li>Jose Palen, josepalen@jollyproudenterprises.com, 10</li>
             <li>Ronil Soto, ronilsoto@jollyproudenterprises.com, 7</li>
             <li>Barbara Soto, barbarasoto@jollyproudenterprises.com, 3</li>
@@ -23,7 +23,7 @@
             <li>Liam Sol, liamsoto@jollyproudenterprises.com, 3</li>
             <li>Juan Encarnacion, juanenc@jollyproudenterprises.com, 1</li>
             <li>Jose Palin, josepalin@jollyproudenterprises.com, 6</li>
-        </ul>
+       </ol>
 
         <h3>Employee Data table</h3>
         <table class="centered-table">
