--- a/clientProject/index.html
+++ b/clientProject/index.html
@@ -14,7 +14,7 @@
     <main>
         <div class="content">
             <div class="main-container">
-              <h2 class="title-box">Title of the website (company)</h2>
+              <h2 class="title-box">Cut & Play Salon – Fun Kids’ Haircuts in Denver, NC</h2>
               <div class="middle-content">
                 <div class="left-buttons">
                   <a href="schedule.html" class="action-button">Schedule an appointment</a>
@@ -33,11 +33,8 @@
     <footer class="footer">
         <div data-include="components/footer.html"></div>
     </footer>
-    <script>
-        document.getElementById("validation_link_html").setAttribute("href", "https://validator.w3.org/check?uri=" + location.href);
-        document.getElementById("validation_link_css").setAttribute("href", "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-      </script>
       <script src="scripts/HTMLInclude.min.js"></script>
       <script src="scripts/survey.js"></script>
+      <script src="scripts/validateLinks.js" defer></script>
 </body>
 </html>
