--- a/clientProject/cancel-reschedule.html
+++ b/clientProject/cancel-reschedule.html
@@ -51,10 +51,9 @@
     <footer class="footer">
         <div data-include="components/footer.html"></div>
     </footer>
-    <script>
-        document.getElementById("validation_link_html").setAttribute("href", "https://validator.w3.org/check?uri=" + location.href);
-        document.getElementById("validation_link_css").setAttribute("href", "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-    </script>
     <script src="scripts/HTMLInclude.min.js"></script>
+    <script src="scripts/survey.js"></script>
+    <script src="scripts/validateLinks.js" defer></script>
+    <script src="scripts/polyfillDateTime.js" defer></script>
 </body>
 </html>
