--- a/clientProject/cancel-reschedule.html
+++ b/clientProject/cancel-reschedule.html
@@ -90,5 +90,9 @@
 
     <!-- Extra polyfill for <input type="date|time"> on older browsers -->
     <script src="scripts/polyfillDateTime.js" defer></script>
+
+    <!-- Friendly pop-ups after booking -->
+    <script src="scripts/scheduleNotifications.js" defer></script>
+
 </body>
 </html>
