--- a/clientProject/schedule.html
+++ b/clientProject/schedule.html
@@ -95,5 +95,9 @@
 
     <!-- Converts unsupported <input type="date|time"> to text w/ placeholders -->
     <script src="scripts/polyfillDateTime.js" defer></script>
+
+    <!-- Friendly pop-ups after booking -->
+    <script src="scripts/scheduleNotifications.js" defer></script>
+
 </body>
 </html>
