--- a/clientProject/msghairdresser.html
+++ b/clientProject/msghairdresser.html
@@ -80,5 +80,9 @@
 
     <!-- Live character counter for the message textarea -->
     <script src="scripts/charCount.js" defer></script>
+
+    <!-- Friendly pop-ups after sending the form -->
+    <script src="scripts/scheduleNotifications.js" defer></script>
+
 </body>
 </html>
